--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jasmine-core": "^2.5.2",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
-    "karma-phantomjs-launcher": "^1.0.2"
+    "karma-phantomjs-launcher": "^1.0.2",
+    "typings": "^2.1.0"
   }
 }
