--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.1.0",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-typescript-preprocessor": "^0.3.1",
+    "typescript": "^2.1.6",
     "typings": "^2.1.0"
   }
 }
